[package]
name = "subtr-actor-js"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Malison <ivanmalison@gmail.com>"]
license = "MIT"
keywords = ["rocket-league"]
categories = ["parsing"]
description = "Rocket League replay transformer"

[lib]
crate-type = ["cdylib"]

[dependencies]
boxcars = "0.9.9"
serde_json = "1.0.96"
subtr-actor = "0.1.1"
wasm-bindgen = "0.2.87"
